# strace-ui-python

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-02-strace-ui-python-port.md
docs/superpowers/specs/: 2026-06-02-strace-ui-python-port-design.md
src/strace_ui/: __init__.py  __main__.py  app.py  cli.py  display_utils.py  fd_tracker.py  filter.py  filter_editor.py  model.py  parser.py  pid_map.py  render.py  schema.py  themes.py  value.py  virtual_list.py  widgets.py
tests/: test_app_perf.py  test_app_pilot.py  test_cli_args.py  test_display_utils.py  test_fd_tracker.py  test_filter.py  test_filter_editor.py  test_fixture_smoke.py  test_interact_live.py  test_live_strace.py  test_model_helpers.py  test_model_reduce.py  test_parser.py  test_pid_map.py  test_render.py  test_schema.py  test_themes.py  test_value.py  test_virtual_list.py
tests/fixtures/: ls.txt  ping.txt  sh.txt
