[project]
name = "strace-ui"
version = "0.1.0"
description = "Interactive strace viewer (Python port of janestreet/strace_ui)"
requires-python = ">=3.11"
dependencies = ["textual>=0.60"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
strace-ui = "strace_ui.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
